Modified test project to use correct template and write a test

--- a/ClassLibrary1.test/ClassLibrary1.test.csproj
+++ b/ClassLibrary1.test/ClassLibrary1.test.csproj
@@ -44,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerApiTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="test_customerapi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -55,6 +55,9 @@
       <Project>{ba598edf-372f-47ac-9cd3-c395759caba3}</Project>
       <Name>ClassLibrary1</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
